<resources>
    <string-array name="how_was_training_array">
        <item>Fine</item>
        <item>Great</item>
        <item>Badly</item>
    </string-array>

    <string-array name="was_painful_array">
        <item>Yes</item>
        <item>No</item>
        <item>A little</item>
    </string-array>

    <string-array name="recommendations">
        <item>Do not do exercises through pain!</item>
        <item>If you are tired, take a break.</item>
        <item>Clothing during exercise should be light, not restricting movement.</item>
    </string-array>

    <string name="app_name">Medical rehabilitation</string>
    <string name="start">Start a class</string>
    <string name="about">About</string>
    <string name="about_app">The medical rehabilitation application is designed for patients after anterior cruciate ligament reconstruction. The complex of exercises of therapeutic gymnastics is designed to be performed at home.</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="equipment">Equipment</string>
    <string name="clear">Clear</string>
    <string name="description1">Exercise 1: Starting position - standing. Roll the ball over the entire surface of the foot. Perform 5 minutes.</string>
    <string name="resume">Resume</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="confirm">Сonfirm</string>
    <string name="notification_scheduled">Notification is scheduled</string>
    <string name="notification">Notification</string>
    <string name="training_time">Start performing the exercises</string>
    <string name="rest">Rest</string>
    <string name="want_to_rest">Do you want to rest?</string>
    <string name="scroll_view">Scroll view</string>
    <string name="doctor_email">Your doctor\'s email address</string>
    <string name="how_was_training">How was the lesson?</string>
    <string name="fill_questionnaire">Please fill out the questionnaire and send it to your attending physician, so it will be easier for him to monitor the state of your medical rehabilitation</string>
    <string name="was_painful">Was it painful when doing the exercises?</string>
    <string name="failed_exercieses">Specify the numbers of exercises that cause difficulties/unpleasant sensations (If there are none, leave the field empty)</string>
    <string name="send">Send</string>
    <string name="plus30sec">+30 sec</string>
    <string name="send_mail">Send mail</string>
    <string name="enter_failed_exercises">Maximum of 10 characters</string>
    <string name="description2">Exercise 2: Starting position – lying on your stomach, hand on the lower back (for control). The operated leg is lifted up by 10-15 cm . and we perform dynamic exercises. Perform 8-10 times.</string>
    <string name="warning">There are contraindications. Before using this application, it is necessary to consult with your doctor</string>
    <string name="choose_next_trainig">Select the date of the next class</string>
    <string name="description3">Exercise 3: Starting position - lying on your back. We start with a healthy leg. Raise the straight leg by 10 degrees, 20 degrees and 30 degrees, holding at each level for 7-10 seconds, slowly return to the starting position. Perform alternately with each leg 10-15 times.</string>
    <string name="description4">Exercise 4: Starting position - lying on the side of the operated leg, the upper leg is bent at the knee, resting in front of the other leg. Perform lifting of the operated leg. Perform 10-15 times.</string>
    <string name="exercise1">For this exercise, use a small ball (tennis).</string>
    <string name="exercise2_3_4">It is advisable to perform this exercise on a gym mat.</string>
    <string name="warning2">The appearance of pain during exercise is a signal to reduce the amplitude of exercise, their intensity, or to completely stop their performance.</string>
    <string name="fill_email">Fill out the email</string>
    <string name="on_menu">On the menu</string>
    <string name="exercise_history">Exercise History</string>
    <string name="date_of_exercise_text">Date of exercise</string>
    <string name="was_painful_text">Did it painful?</string>
    <string name="how_was_training_text">How did the exercise go?</string>
    <string name="return_to_main_menu">To return to the main menu, press the \"Back\" button again</string>
    <string name="exit_app">To exit the app, press the \"Back\" button again.</string>
</resources>